details page changes.

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,7 +10,7 @@ html {
     padding: 0;
     height: 100%;
     font-family: $font-rubik;
-    background: $white;
+    background: $black;
     .hide {
       display: none !important;
     }
