--- a/client/src/components/SelectBox/SelectBox.scss
+++ b/client/src/components/SelectBox/SelectBox.scss
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 10px 0;
     font-size: $medium;
-    color: #fff;
+    color: $theme-gold;
     margin-bottom: 30px;
     border: none;
     border-bottom: 1px solid #fff;
