--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: $white;
+  color: $theme-gold;
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -16,8 +16,8 @@
   letter-spacing: 4px;
 
   &:hover {
-    background: $white;
-    color: $theme-blue;
+    background: $theme-gold;
+    color: $black;
   }
 
   span {
@@ -28,7 +28,7 @@
       left: -100%;
       width: 100%;
       height: 2px;
-      background: linear-gradient(90deg, transparent, $white);
+      background: linear-gradient(90deg, transparent, $theme-gold);
       animation: btn-anim1 1s linear infinite;
     }
     &:nth-child(2) {
@@ -36,7 +36,7 @@
       right: 0;
       width: 2px;
       height: 100%;
-      background: linear-gradient(180deg, transparent, $white);
+      background: linear-gradient(180deg, transparent, $theme-gold);
       animation: btn-anim2 1s linear infinite;
       animation-delay: 0.25s;
     }
@@ -45,7 +45,7 @@
       right: -100%;
       width: 100%;
       height: 2px;
-      background: linear-gradient(270deg, transparent, $white);
+      background: linear-gradient(270deg, transparent, $theme-gold);
       animation: btn-anim3 1s linear infinite;
       animation-delay: 0.5s;
     }
@@ -54,7 +54,7 @@
       left: 0;
       width: 2px;
       height: 100%;
-      background: linear-gradient(360deg, transparent, $white);
+      background: linear-gradient(360deg, transparent, $theme-gold);
       animation: btn-anim4 1s linear infinite;
       animation-delay: 0.75s;
     }
