--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,31 +1,27 @@
 @import "../../constants/variables.scss";
 
 .form-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: 70px;
   width: 50%;
   height: auto;
-  min-height: 75vh;
-  max-height: 75vh;
-  overflow-y: scroll;
   margin: 0 auto;
-  background: radial-gradient(at top left,#111, #1d3557);
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
-  padding: 2rem 4rem;
+  padding: 4rem;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  &::-webkit-scrollbar{
+  &::-webkit-scrollbar {
     display: none;
   }
-  h2 {
+  .form-title {
     margin: 0 0 40px;
+    font-size: $input;
     padding: 0;
     color: #fff;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
   }
   .custom-container {
     width: 100%;
