--- a/client/src/components/Input/Input.scss
+++ b/client/src/components/Input/Input.scss
@@ -33,7 +33,7 @@
     left: 0;
     padding: 10px 0;
     font-size: $medium;
-    color: cyan;
+    color: $theme-gold;
     pointer-events: none;
     transition: 0.5s;
   }
