--- a/client/src/constants/variables.scss
+++ b/client/src/constants/variables.scss
@@ -4,7 +4,9 @@ $mobile-width: 600px;
 
 $white: #fff;
 $black: #000;
+$theme-dark-grey: #30302E;
 $theme-dark-blue: #141e30;
+$theme-gold: #d2b279;
 $theme-blue: #243b55;
 $button-primary: #1d3557;
 $loader-overlay: rgba(246, 246, 246, 0.5);
