--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -2,6 +2,8 @@
 
 @import "../../constants/variables.scss";
 
+$button-animation-duration: 4s;
+
 .button-wrapper {
   position: relative;
   display: inline-block;
@@ -29,7 +31,7 @@
       width: 100%;
       height: 2px;
       background: linear-gradient(90deg, transparent, $theme-gold);
-      animation: btn-anim1 1s linear infinite;
+      animation: btn-anim1 $button-animation-duration linear infinite;
     }
     &:nth-child(2) {
       top: -100%;
@@ -37,8 +39,8 @@
       width: 2px;
       height: 100%;
       background: linear-gradient(180deg, transparent, $theme-gold);
-      animation: btn-anim2 1s linear infinite;
-      animation-delay: 0.25s;
+      animation: btn-anim2 $button-animation-duration linear infinite;
+      animation-delay: 1s;
     }
     &:nth-child(3) {
       bottom: 0;
@@ -46,8 +48,8 @@
       width: 100%;
       height: 2px;
       background: linear-gradient(270deg, transparent, $theme-gold);
-      animation: btn-anim3 1s linear infinite;
-      animation-delay: 0.5s;
+      animation: btn-anim3 $button-animation-duration linear infinite;
+      animation-delay: 2s;
     }
     &:nth-child(4) {
       bottom: -100%;
@@ -55,8 +57,8 @@
       width: 2px;
       height: 100%;
       background: linear-gradient(360deg, transparent, $theme-gold);
-      animation: btn-anim4 1s linear infinite;
-      animation-delay: 0.75s;
+      animation: btn-anim4 $button-animation-duration linear infinite;
+      animation-delay: 3s;
     }
   }
 }
