added holiday option for daily profits, added footer animation, fixed cors issue.

--- a/client/src/components/Input/Input.scss
+++ b/client/src/components/Input/Input.scss
@@ -44,4 +44,15 @@
     left: 0;
     font-size: $smaller;
   }
+  .checkbox-wrapper {
+    display: flex;
+    align-items: center;
+    span {
+      color: $theme-gold;
+      input {
+        width: auto;
+        margin-left: 2rem;
+      }
+    }
+  }
 }
